# UniversalContextProtocol

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  DEV_PLAN_TO_COMPLETION.md  DOCUMENTATION_MAP.md  Dockerfile  MANIFEST.in  MIGRATION_NOTES.md  PRIORITIZATION_MATRIX.md  PROMPT.md  README.md  ROADMAP_VISUAL.md  START_HERE.md  WORKLOG.md  claude_desktop_config.example.json  claude_desktop_config_ucp.json  docker-compose.yml  pyproject.toml  setup.py  test_both_servers.py  test_import.py  test_mcp.py  test_msgs.jsonl  test_registry.py  test_routing.py  test_ucp_filesystem.py  ucp_config.example.yaml  ucp_config_test.yaml  ucp_source_of_truth_whitepaper.md  verify_failure_modes.py  verify_milestone_1_2.py
.agent/: AGENT_A_BACKEND_PLAN.md  BACKEND_EXECUTIVE_SUMMARY.md
.agent/archive/: AGENT_A_BACKEND_PLAN.md
.agent/workflows/: start-phase1.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
.serena/: project.yml
archive/src/ucp_original/ucp/: __init__.py  bandit.py  http_server.py  raft.py  routing_pipeline.py  session.py  transports.py
clients/: README.md
clients/cli/: README.md  config.example.yaml
clients/cli/ucp_chat/: __init__.py  cli.py  providers.py
clients/desktop/: README.md  package.json  tsconfig.json
clients/desktop/src/main/: providerService.ts
clients/desktop/src/preload/: preload.ts
clients/desktop/src/renderer/: App.tsx
clients/desktop/src/renderer/components/: ChatView.tsx  Sidebar.tsx
clients/harness/: run_baseline.py  run_baseline_simple.py  run_eval.py  tasks.json  test_mock_server.py
clients/reports/: baseline_benchmark_v0.1.json
clients/vscode/: tsconfig.json
clients/vscode/src/: chatView.ts  contextCapture.ts  contextView.ts  toolsView.ts  ucpClient.ts
cloud/: README.md  pyproject.toml
cloud/clients/vscode/: README.md  package.json
cloud/clients/vscode/src/: extension.ts  statusBar.ts
cloud/docs/: roadmap.md
cloud/src/ucp_cloud/: __init__.py  router.py  server.py
cloud/src/ucp_cloud/api/: __init__.py
cloud/src/ucp_cloud/auth/: __init__.py
cloud/src/ucp_cloud/pipeline/: __init__.py
docs/: 2210.03629v3_ReAct.md  2302.04761v1_Toolformer.md  2305.15334v1_Gorilla.md  2307.16789v2_MetaGPT.md  2310.11511v1_MemGPT.md  2402.01159v2_MobileAgent.md  2403.03572v1_HyperuniformPointSets.md  2405.12166v1_CouetteFlow.md  cicd_setup.md  debugging_playbook.md  evaluation_harness.md  getting_started.md  index.md  milestone_1_3_claude_desktop_test.md  milestone_1_4_telemetry_infrastructure.md  milestone_1_5_baseline_benchmark.md  milestone_1_6_failure_mode_testing.md  milestone_1_8_pypi_release.md  milestone_1_9_docker_image.md  production_deployment.md  roadmap.md  sota_tool_selection_prototype.md  synthesis_agent_design.md  synthesis_context_management.md  synthesis_feedback_eval.md  synthesis_tool_selection.md  ucp_design_plan.md
docs/archive/: DEV_PLAN_TO_COMPLETION.md  PRIORITIZATION_MATRIX.md  ROADMAP_VISUAL.md  START_HERE.md  ucp_design_plan.md
docs/pdfs/: 2210.03629v3.md  2302.04761v1.md  2305.15334v1.md  2307.16789v2.md  2310.11511v1.md  2402.01159v2.md  2403.03572v1.md  2405.12166v1.md
local/: Dev-Roadmap.txt  README.md  Spec_report.txt  pyproject.toml
local/clients/cli/: pyproject.toml
local/clients/cli/ucp_chat/: config.py  session.py  ucp_client.py
local/clients/desktop/: electron.vite.config.ts
local/clients/desktop/src/main/: main.ts  ucpService.ts
local/clients/desktop/src/renderer/: index.html  main.tsx
local/clients/desktop/src/renderer/components/: MessageBubble.tsx  SettingsModal.tsx  TitleBar.tsx
local/clients/desktop/src/renderer/styles/: global.scss
local/docs/: getting_started.md
local/src/ucp_mvp/: __init__.py  cli.py  config.py  http_server.py  models.py  router.py  server.py  session.py  telemetry.py  tool_zoo.py
local/tests/tests/: __init__.py  test_router.py  test_session.py
local/tests/tests/contract/: test_protocol.py
local/tests/tests/mocks/: mock_mcp_server.py
plans/: GETTING_STARTED_ML_PIPELINE.md  ml_pipeline_plan_2026-01-16.md  repository_reorganization_plan.md
reports/: codebase_audit_report.md  corpus_integrity_report.md  milestone_1_3_test_report.md  roadmap_edge.md  validation_report.json
scripts/: enrich_places_demo.py  fix_init.py  fix_init2.py  mass_enrich_places.py
shared/: README.md  pyproject.toml
shared/docs/: api_reference.md
shared/src/ucp_core/: __init__.py  exceptions.py  interfaces.py
shared/src/ucp_transport/: __init__.py  base_transport.py
shared/tests/evaluation/harness/: run_eval.py
src/ucp/: __init__.py  bandit.py  cli.py  client_api.py  config.py  connection_pool.py  dashboard.py  graph.py  http_server.py  online_opt.py  raft.py  registry.py  router.py  routing_pipeline.py  server.py  session.py  telemetry.py  tool_zoo.py
test_data/chromadb/: chroma.sqlite3
tests/: test_claude_desktop_integration.py  test_failure_modes.py  test_integration.py  test_raft.py  test_router.py  test_sota_pipeline.py  test_tool_zoo.py
tests/contract/: test_protocol.py
tests/mocks/: mock_mcp_server.py
