[project]
name = "ucp-cloud"
version = "0.1.0"
description = "UCP Cloud Version - Scalable, multi-tenant, enterprise-ready"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "UCP Contributors"}
]
keywords = ["mcp", "llm", "tools", "context", "cloud", "saas", "enterprise"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ucp-core>=0.1.0",
    "mcp>=1.25.0",
    "qdrant-client>=1.6.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.109.0",
    "langgraph>=0.0.40",
    "sentence-transformers>=2.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[project.scripts]
ucp-cloud = "ucp_cloud.__init__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucp_cloud"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
name = "ucp-cloud"
version = "0.1.0"
description = "UCP Cloud Version - Scalable, multi-tenant, enterprise-ready"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "UCP Contributors"}
]
keywords = ["mcp", "llm", "tools", "context", "cloud", "saas", "enterprise"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ucp-core>=0.1.0",
    "mcp>=1.25.0",
    "qdrant-client>=1.6.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.109.0",
    "langgraph>=0.0.40",
    "sentence-transformers>=2.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[project.scripts]
ucp-cloud = "ucp_cloud.__init__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucp_cloud"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

